# Project_DriveReader

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  categorized.xlsx  classification.json  credentials.json  data.json  doc_classification.xlsx  events.py  exempt.json  main.py  naac.xlsx  new_file.xlsx  pyproject.toml  requirements.txt  test.py
docs/: Makefile  example.ipynb  make.bat
drivereader/: .gitignore  README.md
drivereader/docs/: conf.py
drivereader/src/drivereader/: drivereader.py  trial_main.py
project_drivereader/: excel.py  main.py
project_drivereader/data/: categorized.xlsx  code_list.json  data.json  dept_name_list.json  doc_classification.xlsx  exempt.json  naac.xlsx
src/drivereader/: __init__.py  drivereader.py  excel.py  test.py
tests/: test_drivereader.py
