[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project_drivereader"
version = "0.0.2"
authors = [
    {name="Sam Alex Koshy", email="samuel.alex.koshy@gmail.com"},
]
description = "Read drive files and categorize the data."
readme = "README.md"
requires-python = ">=3.11.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TheParadox543/Project_DriveReader"